# connect-four

backend/: .env  .env.docker  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
backend/src/: constants.py  core.py
backend/src/api/: crud.py  exceptions.py  fields.py  models.py  shortcuts.py  validators.py  views.py  websocket.py
backend/src/db/: client.py  utils.py
backend/src/pet_project/: settings.py
backend/tests/: test_core.py
frontend/: .env  package-lock.json  package.json
frontend/src/app/: layout.tsx
